<resources>
    <string name="app_name">Crocodile</string>
    <string name="crocodile">крокодил</string>
    <string name="new_game">новая игра</string>
    <string name="continue_game">продолжить</string>
    <string name="regulations">правила</string>
    <string name="commands">команды</string>
    <string name="plus">+</string>
    <string name="next">далее</string>
    <string name="rules">правила</string>
    <string name="main_string">Командная игра, основной целью которой является объяснение слов</string>
    <string name="first_rule">Задачей каждого игрока является объяснение как можно большего количества слов своим товарищам по команде.</string>
    <string name="second_rule">Во время объяснения нельзя произносить слова и звуки, показывать отдельные буквы или слово по слогам или по частям.</string>
    <string name="third_rule">Во время объяснения можно объяснять слово любыми жестами и позами.</string>
    <string name="fourth_rule">Отгаданное слово приносит команде одно очко, а за пропущенное слово команда штрафуется.</string>
    <string name="fifth_rule">Победителем считается команда, у которой количество слов достигло установленного значения. Раунды проходят пока не определен победитель.</string>
    <string name="options">параметры</string>
    <string name="play">играть</string>
    <string name="score">счет</string>
    <string name="round">раунд 1</string>
    <string name="play_team">играет команда</string>
    <string name="team_name_round">маугли</string>
    <string name="guessed">отгадано</string>
    <string name="missed">пропу\nщено</string>
    <string name="score_team">0 очков</string>
    <string name="menu">меню</string>
    <string name="winner">победитель</string>
    <string name="count">15</string>
    <string name="points">очков</string>
    <string name="team_name">атомные самураи</string>
</resources>