<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:clipChildren="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crocodile"
            android:textSize="20pt"
            android:textColor="#000000"
            android:fontFamily="@font/seymour_one"
            android:gravity="center"
            android:layout_marginTop="30pt"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/crocodile"/>

        <LinearLayout
            android:layout_width="130pt"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/new_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_selector"
                android:fontFamily="@font/seymour_one"
                android:text="@string/new_game"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/continue_game"
                android:textColor="#000000"
                android:fontFamily="@font/seymour_one"
                android:layout_marginBottom="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/regulations"
                android:textColor="#000000"
                android:fontFamily="@font/seymour_one"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>