<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_play">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/play_team_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/seymour_one"
            android:gravity="center"
            android:text="@string/team_name_round"
            android:textColor="#000000"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/guessed"
            android:ems="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:fontFamily="@font/seymour_one"
            android:gravity="center_horizontal"
            android:text="@string/guessed"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/missed"
            android:ems="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:fontFamily="@font/seymour_one"
            android:gravity="center_horizontal"
            android:text="@string/missed"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/seymour_one"
            android:gravity="center"
            android:text="00:59"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_below="@+id/play_team_label"
            android:layout_centerHorizontal="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/words_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_word_card"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/time"
            android:layout_alignBottom="@+id/score_team"
            android:layout_marginBottom="80dp"/>

        <TextView
            android:id="@+id/score_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/seymour_one"
            android:text="@string/score_team"
            android:textSize="25sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginBottom="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>